--- a/user.html
+++ b/user.html
@@ -1,7 +1,9 @@
 <div id="user_details">
     <div>
         <h3> Name : {{user.name | uppercase}}</h3>
-        <img ng-src="{{user.avatar_url}}">
+        <div>
+            <img ng-src="{{user.avatar_url}}">
+        </div>
     </div>
 
     <div>
